border radius and genetaring css code

--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
         <div class="borderCornersBox">
             <div class="corner">
                 <label for="top-left">top-left</label>
-                <input type="number" placeholder="0">
+                <input type="number" value="0" id="top-left" class="input">
             </div>
             <div class="corner">
                 <label for="top-right">top-right</label>
-                <input type="number" placeholder="0">
+                <input type="number" value="0" id="top-right" class="input">
             </div>
             <div class="corner">
                 <label for="bottom-left">bottom-left</label>
-                <input type="number" placeholder="0">
+                <input type="number" value="0" id="bottom-left" class="input">
             </div>
             <div class="corner">
                 <label for="bottom-right">bottom-right</label>
-                <input type="number" placeholder="0">
+                <input type="number" value="0" id="bottom-right" class="input">
             </div>
         </div>
         <h2>CSS Code</h2>
