copy to clipboard

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
         </div>
         <h2>CSS Code</h2>
-        <div class="cssCode"></div>
+        <textarea class="cssCode" readonly></textarea>
         <button class="copyCodeBtn">Copy Code</button>
     </div>
     <script src="./script.js"></script>
